@@ -5,6 +5,8 @@ News
 
     * Fix NTLM authentication (Nils Rennebarth).
 
+    * Option to disable Message-ID header (Phil Sutter).
+
   * Version 0.6.0 (2007-09-03):
 
     * Handle CR-LF newline endings when parsing the headers.
